==> samuelpoiraud/robot/STM32/QS_branch/QS_uart.c <==
#include "QS_uart.h"
#include "QS_ports.h"
#include "../stm32f4xx_hal/stm32f4xx_hal_usart.h"
#include "../config/config_pin.h"
	#define USART_FOR_PRINTF	UART1_ID	//Default uart for output : 1.
	#define USART_FOR_PRINTF_PTR USART1
	#define USART_FOR_PRINTF_PTR USART2
	#define USART_FOR_PRINTF_PTR USART3
	#define USART_FOR_PRINTF_PTR USART4
	#define USART_FOR_PRINTF_PTR USART5
	#define USART_FOR_PRINTF_PTR USART6
	#define UART1_BAUDRATE 115200
	#define UART2_BAUDRATE 115200
	#define UART3_BAUDRATE 115200
	#define UART4_BAUDRATE 115200
	#define UART5_BAUDRATE 115200
	#define UART6_BAUDRATE 115200

static void UART_init(uart_id_e uart_id, uint32_t baudrate)
{
	assert(baudrate > 1000);
	assert(uart_id < UART_ID_NB);

	UART_HandleStructure[uart_id].Instance = (USART_TypeDef*)instance_array[uart_id];
	UART_HandleStructure[uart_id].Init.BaudRate = baudrate;
	UART_HandleStructure[uart_id].Init.WordLength = UART_WORDLENGTH_8B;
	UART_HandleStructure[uart_id].Init.StopBits = UART_STOPBITS_1;
	UART_HandleStructure[uart_id].Init.Parity = UART_PARITY_NONE;
	UART_HandleStructure[uart_id].Init.HwFlowCtl = UART_HWCONTROL_NONE;
	UART_HandleStructure[uart_id].Init.Mode = UART_MODE_TX_RX;
	UART_HandleStructure[uart_id].Init.OverSampling = UART_OVERSAMPLING_8;

	/*On applique les parametres d'initialisation ci-dessus */
	HAL_UART_Init(&UART_HandleStructure[uart_id]);

	/*Activation de l'UART */
	__HAL_UART_ENABLE(&UART_HandleStructure[uart_id]);
}

void UART_set_baudrate(Uint8 uart_id, Uint32 baudrate) {

	assert(uart_id <= 6);

	switch(uart_id) {
		case 1:
			UART_init(UART1_ID, baudrate);
			break;
		case 2:
			UART_init(UART2_ID, baudrate);
			break;
		case 3:
			UART_init(UART3_ID, baudrate);
			break;
		case 4:
			UART_init(UART4_ID, baudrate);
			break;
		case 5:
			UART_init(UART5_ID, baudrate);
			break;
		case 6:
			UART_init(UART6_ID, baudrate);
			break;
		default:
			break;
	}
}

		Uint8 UART1_get_next_msg()
		{
			static Uint32 next_to_read =0;
			if (m_u1rxnum > next_to_read)
			{
				HAL_NVIC_DisableIRQ(USART1_IRQn);
				if (m_u1rxnum - next_to_read == 1)
					m_u1rx = 0;
				HAL_NVIC_EnableIRQ(USART1_IRQn);
				return m_u1rxbuf[((next_to_read++) % UART_RX_BUF_SIZE)];
			}
			else
				return 0;
		}

		void UART1_putc(Uint8 c)
		{
			static bool_e reentrance_detection = FALSE;

			if(reentrance_detection)
				return;					//Si printf en IT pendant un printf, on abandonne le caractère du printf en IT..

			reentrance_detection = TRUE;
			if(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART1_ID], USART_IT_TXE))
				HAL_USART_Transmit_IT(&UART_HandleStructure[UART1_ID], c, 1);
			else
			{
				//mise en buffer + activation IT U1TX.

				assert(buffer1tx.nb_datas < buffer1tx.size + 1);
				//Critical section (Interrupt inibition)

				while(buffer1tx.nb_datas >= buffer1tx.size);	//ON BLOQUE ICI*
				//Si vous êtes bloqués ici....... vérifiez qu'aucun printf n'est fait en IT...

				HAL_NVIC_DisableIRQ(USART1_IRQn);	//On interdit la préemption ici.. pour éviter les Read pendant les Write.

				if(buffer1tx.nb_datas < buffer1tx.size)
				{
					buffer1tx.datas[buffer1tx.index_write] = c;
					buffer1tx.index_write = (buffer1tx.index_write>=buffer1tx.size-1)?0:(buffer1tx.index_write + 1);
					buffer1tx.nb_datas++;
				}

				HAL_NVIC_EnableIRQ(USART1_IRQn);	//On active l'IT sur TX... lors du premier caractère à envoyer...
				__HAL_USART_ENABLE_IT(__HAL_USART_GET_FLAG, USART_IT_TXE);
			}
			reentrance_detection = FALSE;
		}

		void UART1_putc(Uint8 mes)
		{
			while(__HAL_USART_GET_FLAG(__HAL_USART_GET_FLAG, USART_FLAG_TXE) == RESET);
			HAL_USART_Transmit(&UART_HandleStructure[UART1_ID], mes, 1, 100);
		}

	void _ISR USART1_IRQHandler(void){
		#ifdef USE_UART1RXINTERRUPT
			if(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART1_ID], USART_IT_RXNE)) {
				Uint8 * receiveddata = &(m_u1rxbuf[(m_u1rxnum%UART_RX_BUF_SIZE)]);

				while(__HAL_USART_GET_FLAG(&UART_HandleStructure[UART1_ID], USART_FLAG_RXNE)){
					#ifdef LED_UART
						toggle_led(LED_UART);
					#endif
					#ifdef MODE_SIMULATION
					static Uint8 we_are_receiving_can_msg = FALSE;
					Uint8 c;
					HAL_UART_Receive_IT(&UART_HandleStructure[UART1_ID],&c, 1);
					if(we_are_receiving_can_msg == 0)
					{
						if(c==0x01)
							we_are_receiving_can_msg = 1;
					}
					else
						we_are_receiving_can_msg++;

					if(we_are_receiving_can_msg)
					{
						*(receiveddata++) = c;
						m_u1rxnum++;
						m_u1rx =1;
						/* pour eviter les comportements indésirables */
						if (receiveddata - m_u1rxbuf >= UART_RX_BUF_SIZE)
							receiveddata = m_u1rxbuf;
					}
					if(we_are_receiving_can_msg == 13)	//Dernier octet du message can (0x04...)
						we_are_receiving_can_msg = 0;
					#else
						HAL_UART_Receive_IT(&UART_HandleStructure[UART1_ID], receiveddata,1);
						receiveddata++;
						m_u1rxnum++;
						m_u1rx =1;
						/* pour eviter les comportements indésirables */
						if (receiveddata - m_u1rxbuf >= UART_RX_BUF_SIZE)
							receiveddata = m_u1rxbuf;
					#endif
				}
				__HAL_USART_DISABLE_IT(&UART_HandleStructure[UART1_ID], USART_IT_RXNE);
			}
		#endif
		#ifdef USE_UART1TXINTERRUPT
			if(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART1_ID], USART_IT_TXE)) {
				Uint8 c;

				//debufferiser.
				if(IsNotEmpty_buffer(&buffer1tx))
				{
					assert(buffer1tx.index_read < buffer1tx.size);
					//Critical section
					if(buffer1tx.nb_datas > (Uint8)0)
					{
						c = buffer1tx.datas[buffer1tx.index_read];
						buffer1tx.index_read = (buffer1tx.index_read>=buffer1tx.size-1)?0:(buffer1tx.index_read + 1);
						buffer1tx.nb_datas--;
						HAL_USART_Transmit_IT(&UART_HandleStructure[UART1_ID], c, 1);
					}
					//Critical section

				}
				else if(!IsNotEmpty_buffer(&buffer1tx))
					__HAL_USART_DISABLE_IT(&UART_HandleStructure[UART1_ID], USART_IT_TXE);	//Si buffer vide -> Plus rien à envoyer -> désactiver IT TX.
			}
		#endif
	}

		void UART2_putc(Uint8 c)
		{
			if(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART2_ID], USART_IT_TXE))
				HAL_USART_Transmit_IT(&UART_HandleStructure[UART2_ID], c, 1);
			else
			{
				//mise en buffer + activation IT U2TX.

				assert(buffer2tx.nb_datas < buffer2tx.size + 1);
				//Critical section (Interrupt inibition)

				while(buffer2tx.nb_datas >= buffer2tx.size);	//ON BLOQUE ICI

				AHL_NVIC_DisableIRQ(USART2_IRQn);	//On interdit la préemption ici.. pour éviter les Read pendant les Write.

				if(buffer2tx.nb_datas < buffer2tx.size)
				{
					buffer2tx.datas[buffer2tx.index_write] = c;
					buffer2tx.index_write = (buffer2tx.index_write>=buffer2tx.size-1)?0:(buffer2tx.index_write + 1);
					buffer2tx.nb_datas++;
				}

				HAL_NVIC_EnableIRQ(USART2_IRQn);	//On active l'IT sur TX... lors du premier caractère à envoyer...
				__HAL_USART_ENABLE_IT(&UART_HandleStructure[UART2_ID],USART_IT_TXE);
			}
		}

		void UART2_putc(Uint8 mes)
		{
			while(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART2_ID], USART_FLAG_TXE) == RESET);
			HAL_USART_Transmit(&UART_HandleStructure[UART2_ID], mes, 1, 100);
		}

	void _ISR USART2_IRQHandler(void)
	{
		#ifdef USE_UART2RXINTERRUPT
			if(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART2_ID], USART_IT_RXNE)) {
				Uint8 * receiveddata = &(m_u2rxbuf[(m_u2rxnum%UART_RX_BUF_SIZE)]);

				while(__HAL_USART_GET_FLAG(&UART_HandleStructure[UART2_ID], USART_FLAG_RXNE))
				{
					#ifdef LED_UART
						toggle_led(LED_UART);
					#endif
					HAL_UART_Receive_IT(&UART_HandleStructure[UART2_ID], receiveddata,1);
					receiveddata++;
					m_u2rxnum++;
					m_u2rx = 1;
					/* pour eviter les comportements indésirables */
					if (receiveddata - m_u2rxbuf >= UART_RX_BUF_SIZE)
						receiveddata = m_u2rxbuf;
				}
				__HAL_USART_DISABLE_IT(&UART_HandleStructure[UART2_ID], USART_IT_RXNE);
				HAL_NVIC_ClearPendingIRQ(USART2_IRQn);
			}
		#endif	//def USE_UART2RXINTERRUPT
		#ifdef USE_UART2TXINTERRUPT
			if(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART2_ID], USART_IT_TXE)) {
				Uint8 c;

				//debufferiser.
				if(IsNotEmpty_buffer(&buffer2tx))
				{
					assert(buffer2tx.index_read < buffer2tx.size);
					//Critical section
					if(buffer2tx.nb_datas > (Uint8)0)
					{
						c = buffer2tx.datas[buffer2tx.index_read];
						buffer2tx.index_read = (buffer2tx.index_read>=buffer2tx.size-1)?0:(buffer2tx.index_read + 1);
						buffer2tx.nb_datas--;
						HAL_USART_Transmit_IT(&UART_HandleStructure[UART2_ID], &c, 1);
					}
					//Critical section

				}
				else if(!IsNotEmpty_buffer(&buffer2tx))
					__HAL_USART_DISABLE_IT(&UART_HandleStructure[UART2_ID], USART_IT_TXE);	//Si buffer vide -> Plus rien à envoyer -> désactiver IT TX.
			}
		#endif
	}

		Uint8 UART2_get_next_msg()
		{
			static Uint32 next_to_read =0;
			if (m_u2rxnum > next_to_read)
			{
				HAL_NVIC_DisableIRQ(USART2_IRQn);
				if (m_u2rxnum - next_to_read == 1)
					m_u2rx = 0;
				HAL_NVIC_EnableIRQ(USART2_IRQn);
				return m_u2rxbuf[((next_to_read++) % UART_RX_BUF_SIZE)];
			}
			else
				return 0;
		}

		void UART3_putc(Uint8 c)
		{
			if(__HAL_USART_GET_FLAG(&UART_HandleStructure[UART3_ID], USART_IT_TXE))
				HAL_USART_Transmit_IT(&UART_HandleStructure[UART3_ID], &c, 1);
			else
			{
				//mise en buffer + activation IT U3TX.

				assert(buffer3tx.nb_datas < buffer3tx.size + 1);
				//Critical section (Interrupt inibition)

				while(buffer3tx.nb_datas >= buffer3tx.size);	//ON BLOQUE ICI

				HAL_NVIC_DisableIRQ(USART3_IRQn);	//On interdit la préemption ici.. pour éviter les Read pendant les Write.

				if(buffer3tx.nb_datas < buffer3tx.size)
				{
					buffer3tx.datas[buffer3tx.index_write] = c;
					buffer3tx.index_write = (buffer3tx.index_write>=buffer3tx.size-1)?0:(buffer3tx.index_write + 1);
					buffer3tx.nb_datas++;
				}

				HAL_NVIC_EnableIRQ(USART3_IRQn);	//On active l'IT sur TX... lors du premier caractère à envoyer...
				__HAL_USART_ENABLE_IT(&UART_HandleStructure[UART3_ID], USART_IT_TXE);
			}
		}

		void UART3_putc(Uint8 mes)
		{
			while(__HAL_USART_GET_FLAG(&UART_HandleStructure[UART3_ID], USART_FLAG_TXE) == RESET);
			HAL_USART_Transmit(&UART_HandleStructure[UART3_ID], &mes, 1, 100);
		}

	void _ISR USART3_IRQHandler(void)
	{
		#ifdef USE_UART3RXINTERRUPT
			if(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART3_ID], USART_IT_RXNE)) {
				Uint8 * receiveddata = &(m_u3rxbuf[(m_u3rxnum%UART_RX_BUF_SIZE)]);

				while(__HAL_USART_GET_FLAG(&UART_HandleStructure[UART3_ID], USART_FLAG_RXNE))
				{
					#ifdef LED_UART
						toggle_led(LED_UART);
					#endif
					HAL_UART_Receive_IT(&UART_HandleStructure[UART3_ID], receiveddata,1);
					receiveddata++;
					m_u3rxnum++;
					m_u3rx = 1;
					/* pour eviter les comportements indésirables */
					if (receiveddata - m_u3rxbuf >= UART_RX_BUF_SIZE)
						receiveddata = m_u3rxbuf;
				}
				__HAL_USART_DISABLE_IT(&UART_HandleStructure[UART3_ID], USART_IT_RXNE);
				HAL_NVIC_ClearPendingIRQ(USART3_IRQn);
			}
		#endif	//def USE_UART3RXINTERRUPT
		#ifdef USE_UART3TXINTERRUPT
			if(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART3_ID], USART_IT_TXE)) {
				Uint8 c;

				//debufferiser.
				if(IsNotEmpty_buffer(&buffer3tx))
				{
					assert(buffer3tx.index_read < buffer3tx.size);
					//Critical section
					if(buffer3tx.nb_datas > (Uint8)0)
					{
						c = buffer3tx.datas[buffer3tx.index_read];
						buffer3tx.index_read = (buffer3tx.index_read>=buffer3tx.size-1)?0:(buffer3tx.index_read + 1);
						buffer3tx.nb_datas--;
						HAL_USART_Transmit_IT(&UART_HandleStructure[UART3_ID], &c, 1);
					}
					//Critical section

				}
				else if(!IsNotEmpty_buffer(&buffer3tx))
					__HAL_USART_DISABLE_IT(&UART_HandleStructure[UART3_ID], USART_IT_TXE);	//Si buffer vide -> Plus rien à envoyer -> désactiver IT TX.
			}
		#endif
	}

		Uint8 UART3_get_next_msg()
		{
			static Uint32 next_to_read =0;
			if (m_u3rxnum > next_to_read)
			{
				HAL_NVIC_DisableIRQ(USART3_IRQn);
				if (m_u3rxnum - next_to_read == 1)
					m_u3rx = 0;
				HAL_NVIC_EnableIRQ(USART3_IRQn);
				return m_u3rxbuf[((next_to_read++) % UART_RX_BUF_SIZE)];
			}
			else
				return 0;
		}
